--- a/e-math/e-math.csproj
+++ b/e-math/e-math.csproj
@@ -244,6 +244,8 @@
     <None Include="homework\chapter5-3.rtf" />
     <None Include="homework\chapter5.docx" />
     <None Include="homework\chapter5.rtf" />
+    <None Include="homework\chapter6-2.rtf" />
+    <None Include="homework\chapter6-3.rtf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
